fixed the issue of height of body extra space changes the margin top 70px  to 63px

--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -18124,7 +18124,7 @@ a.navbar-brand img {
 
   .w3l-banner-content {
     min-height: 400px;
-    margin-top: 70px;
+    margin-top: 63px;
   }
 }
 
